chore: rename endpoint
